--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 ** Inside&Outside thermometer
-This is an ATtiny85 project to measure the ambient temperature of my office and the outside temperature. The temperatures are measured with two DS18B20 sensor and the values are shown on a SSD1306 0.96" OLED display. The code is written in C++20 with two goals in mind: [[#code-size][small code size]] and [[#power-consumption][low power consumption]].
+This is an ATtiny85 project to measure the ambient temperature of my office and the outside temperature. The temperatures are measured with two DS18B20 sensor and the values are shown on a SSD1306 0.96" OLED display. The code is written in C++17/20 with two goals in mind: [[#code-size][small code size]] and [[#power-consumption][low power consumption]].
 
 [[file:in_action_640px.png]]
 
