--- a/README.org
+++ b/README.org
@@ -10,7 +10,7 @@ This is an ATtiny85 project to measure the ambient temperature of my office and 
 :PROPERTIES:
 :CUSTOM_ID: code-size
 :END:
-This project uses *1996bytes* (~text=1980;data=12;bss=1~) if compiled with ~avr-gcc 10.2.0~ and ~-Os~. 
+This project uses *1978bytes* if compiled with ~avr-gcc 10.2.0~ and ~-Os~. 
 
 ** Power consumption
 :PROPERTIES:
@@ -21,6 +21,7 @@ The watchdog timer is used to save power when the device is not reading a temper
 ** Dependencies
 1. [[https://github.com/ricardocosme/att85][ssd1306]]
 2. [[https://github.com/ricardocosme/ds18b20][ds18b20]]
+3. [[https://github.com/ricardocosme/avrcxx][avrcxx]]
 
 ** Software requirements
 1. ~avr-gcc 10.2~ with ~-std=c++20~
