--- a/README.org
+++ b/README.org
@@ -25,6 +25,6 @@ The watchdog timer is used to save power when the device is not reading a temper
 4. [[https://github.com/ricardocosme/avrIO][avrIO]]
 5. [[https://github.com/ricardocosme/avrINT][avrINT]]
 
-** Software requirements
-1. ~avr-gcc 10.2~ with ~-std=c++20~ and ~-Os~
-2. ~avr-libc 2.0~
+** Requirements
+1. ~avr-gcc 10.2~ with ~-std=c++20 -Os~
+
